Suppress illegal access warnings upon generation execution